# simba

./: .coverage  MANIFEST.in  README.md  meta.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  test.def
.github/workflows/: python-publish.yml
docs/source/: Framework.rst  Framework_elements.rst  Framework_objects.rst  MasterLattice.rst  SimCodes.rst  SimulationFramework.Codes.ASTRA.rst  SimulationFramework.Codes.CSRTrack.rst  SimulationFramework.Codes.Elegant.rst  SimulationFramework.Codes.GPT.rst  SimulationFramework.Codes.Generators.rst  SimulationFramework.Codes.Ocelot.rst  SimulationFramework.Codes.Xsuite.rst  SimulationFramework.Codes.rst  SimulationFramework.Elements.rst  SimulationFramework.Modules.Beams.Particles.rst  SimulationFramework.Modules.Beams.rst  SimulationFramework.Modules.Fields.rst  SimulationFramework.Modules.Matrices.rst  SimulationFramework.Modules.Twiss.rst  SimulationFramework.Modules.optimisation.rst  SimulationFramework.Modules.plotting.rst  SimulationFramework.Modules.rst  SimulationFramework.rst  conf.py  getting-started.rst  index.rst  installation.rst  loading-a-lattice.rst  references.bib  setting-up-a-lattice.rst  simba.Codes.ASTRA.rst  simba.Codes.CSRTrack.rst  simba.Codes.Cheetah.rst  simba.Codes.Elegant.rst  simba.Codes.GPT.rst  simba.Codes.Generators.rst  simba.Codes.MAD8.rst  simba.Codes.OPAL.rst  simba.Codes.Ocelot.rst  simba.Codes.Xsuite.rst  (+12 more)
examples/: .gitignore  test_initialisation.py
simba/: Executables.yaml  Framework.py  FrameworkHelperFunctions.py  Framework_Settings.py  Framework_elements.py  Framework_lattices.py  Framework_objects.py  _version.py  elementkeywords.yaml  hosts.yaml  requirements.txt  yaml_checker.py
tests/: framework_test.py  twiss.py  xopt_test.py
unit_tests/: .coverage  FODO.yaml  test.def  test_beam.py  test_changes.yaml  test_field.py  test_framework.py  test_framework_lattice.py  test_framework_objects.py  test_frozen_snapshot_and_settings.py  test_generator.py  test_helper_functions.py  test_pep8_adaptor.py  test_track.py  test_twiss.py
(+149 files in other folders)
