[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "simba-accelerator"
description = "A python framework for particle accelerator simulations"
readme = "README.md"
dynamic = ["version"]
authors = [
    {name = "James Jones", email = "james.jones@stfc.ac.uk"},
]
license = "GPL-3.0-or-later"
maintainers = [
    {name = "James Jones", email = "james.jones@stfc.ac.uk"},
    {name = "Alex Brynes", email = "alexander.brynes@stfc.ac.uk"},
    {name = "Mark Johnson", email = "mark.johnson@stfc.ac.uk"},
]
dependencies = [
    "deepdiff>=8.6",
    "h5py>=2.10",
    "munch>=2.5",
    "numpy>=2",
    "tqdm>=4",
    "PyQt5>=5.1",
    "PyYAML>=5.3",
    "mpl-axes-aligner>=1.1",
    "lox>=0.11",
    "fastKDE>=2.1.5",
    "pydantic>=2.5.3",
    "attrs>=23.2.0",
    "ocelot-desy==25.06.0",
    "scipy>=1.5",
    "soliday.sdds",
    "easygdf>=2.1.1",
    "xsuite>=0.39.0",
    "paramiko",
    "deap",
    "pyqtgraph",
    "numba",
    "pyfftw",
    "numexpr",
    "cheetah-accelerator>=0.7.5",
    "openpmd-beamphysics>=0.10",
    "xopt",
    "Wake-T>=0.8.0",
    "nala-accelerator",
]

requires-python = ">= 3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
#    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

[project.optional-dependencies]

test = [
    "pytest",
    "pytest-cov",
]

docs = [
    "sphinx>=8",
    "sphinx-rtd-theme",
    "myst-nb",
    "sphinx_autodoc_typehints>=3",
    "sphinxcontrib-bibtex",
]

[tool.setuptools_scm]
version_scheme = "post-release"   # valid built-in scheme
local_scheme = "no-local-version" # removes +untagged suffix


[project.urls]
Homepage = "https://github.com/astec-stfc/simba"
Repository = "https://github.com/astec-stfc/simba.git"
Issues = "https://github.com/astec-stfc/simba/-/issues/"


[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"mypackage" = ["**/*.yaml"]
